# umass-hackerathon-Productivity-Ash

./: .env  .gitignore  STARTUP_INSTRUCTIONS.md  app.py  focus_helper.py  pyproject.toml  video_script.md  voiceengine.py
data/: focus_session.json  reminders.json
experiment/: agent.py  app.py  docling_extractor.py  eleventlab.py  focus_helper.py  gemini_sdk.py  gemini_tts.py  mac_default_tts.py  mac_photo.py  mac_tts.py  macos_shortcuts.py  main.py  notification.py  openai_tts.py  streaming_agent.py  streaming_tts.py  stt.py
memory/: A-Mem_Memory_for_LLM_Agents.md  Excercise 2_20251108_170034.md  Excercise 2_20251109_150121.md  F25_687_Syllabus_v2_20251108_112903.md  Math_233_Exam_2_topics_F25_20251108_200739.md  PRIME_Planning_and_Retrieval-Integrated_Memory_2025.md  RARE_Retrieval-Augmented_Reasoning_Enhancement.md  RARE_paper.md  a-mem-paper.md  conversation_history.json  deadline_reminder_2025-11-14.md  llm_agent_project_tracking.md  llm_agents_paper_analysis.txt  mda_gents_paper.md  paper_adaptive_collaboration_llms.md  paper_learningx_lab.txt  screenshot_analysis_2025-11-13.md  session_track_llm_resources_2025-11-13.md  task_tool-universe-research.md  tasks.json  uncertainty_reasoning_papers.txt  user_instruction.md
reports/: tts_memory_optimization_case_study.md
screenshots/: ..screenshot_20251108_202518.png-fvpf
src/: agent_loader.py  agents_config.yaml  background_handler.py  background_handler_simple.py  manager_agent.py  menubar_timer.py  simple_classifier.py  streaming_agent.py  time_depends_tasks.py  tool.py  tts_pipeline.py  worker_template.py
(+10 files in other folders)
